--- a/adr.html
+++ b/adr.html
@@ -39,9 +39,10 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>Agence ADR</h2></strong>
-									
-									<p><i>Mise en page du Directory</i></p>
+									<strong><h2>AGENCE A.D.R</h2></strong>
+									—<br>
+									<strong>Agence de communication spécialisée dans la création d'expériences pour les marques de luxe.</strong>
+									<p><i>Création du Directory de l'agence.</i></p>
 									↓
 								    <br><br>
 									<span class="image main"><img src="images/adr01.jpg" alt="Couverture du directory" /></span>
