--- a/clubimmo.html
+++ b/clubimmo.html
@@ -39,16 +39,15 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>Club Immobilier</h2></strong>
-									
-									<p><i>Blasons, livret et packaging</i></p>
+									<strong><h2>CLUB IMMOBILIER</h2></strong>
+									—<br>
+									<strong>Société de formation dans l'investissement immobilier.</strong>
+									<p><i>Création des blasons, livret de bienvenue et du packaging</i></p>
 									↓
 								    <br><br>
 									<span class="image main"><img src="images/clubimmo01.gif" alt="gif des blasons formation" /></span>
 									<br>
 									<span class="image main"><img src="images/clubimmo01.jpg" alt="blasons des formations" /></span>
-									<br>
-									<span class="image main"><img src="images/clubimmo02.jpg" alt="packaging de la box de l'investisseur" /></span>
 									<br>
 									<span class="image main"><img src="images/clubimmo03.jpg" alt="livret de bienvenue club immo" /></span>
 									<br>
@@ -56,11 +55,11 @@
 									<br>
 									<span class="image main"><img src="images/clubimmo05.jpg" alt="intérieur du livret" /></span>
 									<br>
-									<span class="image main"><img src="images/clubimmo06.jpg" alt="intérieur du livret" /></span>
-									<br>
 									<span class="image main"><img src="images/clubimmo07.jpg" alt="intérieur du livret " /></span>
 									<br>
-									<span class="image main"><img src="images/clubimmo08.jpg" alt="box, livret et stickers" /></span>
+									<span class="image main"><img src="images/clubimmo06.jpg" alt="intérieur du livret" /></span>
+									<br>
+									<span class="image main"><img src="images/clubimmo02.jpg" alt="box, livret et stickers" /></span>
 									<br>
 
 										<p>
