--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<img src="images/meve.GIF" width ="27%" alt="logomeve"/>
-									<br>
-									↓
-									<br><strong>Marie Velasco</strong>
+									<img src="images/meve.GIF" width="30%" alt="gifmeve"/>
+									
+									<br><strong>MARIE VELASCO</strong>
 									<br>
 									Designer graphiste
 									<br>
