--- a/estampe.html
+++ b/estampe.html
@@ -38,8 +38,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									
-									<strong><h2>Estampe Cosmetics</h2></strong>
+									<strong><h2>ESTAMPE COSMETICS</h2></strong>
+									—<br>
+									<strong>Marque de maquillage non-genré, naturel et éco-conçu.</strong>
 									<p><i>Webdesign</i></p>
 									↓
 								    <br><br>
