--- a/lbk.html
+++ b/lbk.html
@@ -38,8 +38,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									
-									<strong><h2>LBK Paris</h2></strong>
+									<strong><h2>LBK PARIS</h2></strong>
+									—<br>
+									<strong>Marque de vêtement parisienne, éco responsable.</strong>
 									<p><i>Logo et identité visuelle</i></p>
 									↓
 								    <br><br>
