--- a/marine.html
+++ b/marine.html
@@ -39,8 +39,10 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>Marine, diététicienne</h2></strong>
-									<p><i>Logo et identité visuelle</i></p>
+									<strong><h2>MARINE</h2></strong>
+									—<br>
+									<strong>Diététicienne, naturopathe</strong>
+									<p><i>Logo, identité visuelle et documentation</i></p>
 									↓
 								    <br><br>
 									<img src="images/marine09.GIF" width ="50%" alt="icone alimentation"/>
