--- a/olena.html
+++ b/olena.html
@@ -39,7 +39,8 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>Olena Yatsenko</h2></strong>
+									<strong><h2>OLENA YATSENKO</h2></strong>
+									<br> <strong>Marque de vêtement fabriqué en Corse.</strong>
 									<p><i>Logo et identité visuelle</i></p>
 									↓
 								    <br><br>
