--- a/olena.html
+++ b/olena.html
@@ -40,7 +40,8 @@
 								<div class="inner">
 									
 									<strong><h2>OLENA YATSENKO</h2></strong>
-									<br> <strong>Marque de vêtement fabriqué en Corse.</strong>
+									—<br>
+									<strong>Marque de vêtement fabriqué en Corse.</strong>
 									<p><i>Logo et identité visuelle</i></p>
 									↓
 								    <br><br>
