--- a/olena.html
+++ b/olena.html
@@ -59,6 +59,10 @@
 									<br>
 									<span class="image main"><img src="images/olena07.jpg" alt="tote bag olena" /></span>
 									<br>
+									<span class="image main"><img src="images/olena08.jpg" alt="tote bag olena" /></span>
+									<br>
+									<span class="image main"><img src="images/olena09.jpg" alt="tote bag olena" /></span>
+									<br>
 
 										<p>
 										𓁿
