--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
+										<img src="images/augarage01.jpg" alt="Au garage" />
+									</span>
+									<header class="major">
+										<a href="augarage.html"   class="link"></a>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/bbdx06.jpg" alt="BBDX beer" />
+									</span>
+									<header class="major">
+										<a href="bbdx.html"  class="link"></a>
+									</header>
+								</article>
+								<article>
+									<span class="image">
 										<img src="images/clubimmo03.jpg" alt="Projet Club immobilier" />
 									</span>
 									<header class="major">
