--- a/augarage.html
+++ b/augarage.html
@@ -39,7 +39,7 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>Au garage</h2></strong>
+									<strong><h2>AU GARAGE</h2></strong>
 									—<br>
 									<strong>Au Garage est un service permettant aux automobilistes de recevoir plusieurs devis des meilleurs garagistes près de chez eux.</strong>
 									<p><i>Design du site internet et de l'application.</i></p>
