--- a/bbdx.html
+++ b/bbdx.html
@@ -41,8 +41,8 @@
 									
 									<strong><h2>BBDX</h2></strong>
 									—<br>
-									<strong>Création d'une identité visuelle pour une marque de bière artisanale française.</strong>
-									<p><i>Élaboration de l'étiquette et de l'identité visuelle</i></p>
+									<strong>Marque de bière artisanale française.</strong>
+									<p><i>Élaboration de l'identité visuelle de l'étiquette</i></p>
 									↓
 								    <br><br>
 									<span class="image main"><img src="images/bbdx01.jpg" alt="Logotype" /></span>
