--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
 						</ul>
 					</nav>
 
+
+
 				<!-- Main -->
 					<div id="main">
+
 
 						<!-- One -->
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/augarage01.jpg" alt="Au garage" />
+										<img src="images/couv01.jpg" alt="Au garage" />
 									</span>
 									<header class="major">
 										<a href="augarage.html"   class="link"></a>
@@ -47,7 +50,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/bbdx06.jpg" alt="BBDX beer" />
+										<img src="images/couv02.jpg" alt="BBDX beer" />
 									</span>
 									<header class="major">
 										<a href="bbdx.html"  class="link"></a>
@@ -55,7 +58,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/clubimmo03.jpg" alt="Projet Club immobilier" />
+										<img src="images/couv03.jpg" alt="Projet Club immobilier" />
 									</span>
 									<header class="major">
 										<a href="clubimmo.html"  class="link"></a>
@@ -63,15 +66,15 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/lbk01.jpg" alt="Projet LBK Paris" />
+										<img src="images/couvolena.jpg" alt="Projet Olena Yatsenko" />
 									</span>
 									<header class="major">
-										<a href="lbk.html" class="link"></a>
+										<a href="olena.html" class="link"></a>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/adr00.jpg" alt="Projet Agence ADR" />
+										<img src="images/couvadr.jpg" alt="Projet Agence ADR" />
 									</span>
 									<header class="major">
 										<a href="adr.html"   class="link"></a>
@@ -79,16 +82,16 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/estampe05.jpg" alt="Projet Estampe cosmetics" />
+										<img src="images/couvlbk.jpg" alt="Projet LBK paris" />
 									</span>
 									<header class="major">
-										<a href="estampe.html"  class="link"></a>
+										<a href="lbk.html"  class="link"></a>
 										
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/marine01.jpg" alt="Projet Marine, Diétécienne, naturopathe" />
+										<img src="images/couvmarine.jpg" alt="Projet Marine, Diétécienne, naturopathe" />
 									</span>
 									<header class="major">
 										<a href="marine.html"  class="link"></a>
@@ -97,10 +100,10 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/olena03.jpg" alt="Projet Olena Yatsenko" />
+										<img src="images/couvestampe.jpg" alt="Projet Estampe cosmetics" />
 									</span>
 									<header class="major">
-										<a href="olena.html"  class="link"></a>
+										<a href="estampe.html"  class="link"></a>
 									</header>
 								</article>
 							</section>
