--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,19 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<img src="images/meve.GIF" width="30%" alt="gifmeve"/>
-									
-									<br><strong>MARIE VELASCO</strong>
+									<br>M A R I E  
+									<br>V E L A S C O
+									<br><br>
+									<img src="images/meve.GIF" width="309px" alt="gifmeve"/>
 									<br>
-									Designer graphiste
+									<a href="mailto:hello@marievelasco.com" >✎</a>
+									<br>
+									Designer Graphiste
 									<br>
 									<i>0 6 . 1 0 . 4 9 . 7 8 . 5 0 </i>
 									<br>
-									<a href="mailto:hello@marievelasco.com">➤</a>
-									<br><br>
+									<br>
+									
 									<section class="split">
 										<section>
 											<ul class="icons">
