--- a/adr.html
+++ b/adr.html
@@ -39,12 +39,17 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>AGENCE A.D.R</h2></strong>
-									—<br>
-									<strong>Agence de communication spécialisée dans la création d'expériences pour les marques de luxe.</strong>
-									<p><i>Création du Directory de l'agence.</i></p>
-									↓
-								    <br><br>
+									<span class="image main">
+										<p><i><h5>Création et mise en page</h5></i></p>
+											<h3>Agence A.D.R</h3> 
+											<br>
+											<h4>Agence de communication.
+											<br>Spécialisée dans la création d'expériences pour les marques de luxe.
+											<br>—<br><br><br></h4>
+									</span>
+
+									<span class="image main"><img src="images/adr.png" alt="Couverture du directory" /></span>
+									<br>
 									<span class="image main"><img src="images/adr01.jpg" alt="Couverture du directory" /></span>
 									<br>
 									<span class="image main"><img src="images/adr02.jpg" alt="signature adr" /></span>
