--- a/augarage.html
+++ b/augarage.html
@@ -38,13 +38,16 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
+
+									<span class="image main">
+										<p><i><h5>Logo, identité visuelle et design d'application</h5></i></p>
+											<h3>Au Garage</h3> 
+											<br>
+											<h4>Service permettant aux automobilistes de recevoir plusieurs devis.
+											<br>Des meilleurs garagistes près de chez eux.
+											<br>—<br><br><br></h4>
+										</span>	
 									
-									<strong><h2>AU GARAGE</h2></strong>
-									—<br>
-									<strong>Au Garage est un service permettant aux automobilistes de recevoir plusieurs devis des meilleurs garagistes près de chez eux.</strong>
-									<p><i>Design du site internet et de l'application.</i></p>
-									↓
-								    <br><br>
 									<span class="image main"><img src="images/augarage-1.jpg" alt="Logotype" /></span>
 									<br>
 									<span class="image main"><img src="images/augarage-3.png" alt="Interface de l'application" /></span>
