--- a/bbdx.html
+++ b/bbdx.html
@@ -39,12 +39,15 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>BBDX</h2></strong>
-									—<br>
-									<strong>Marque de bière artisanale française.</strong>
-									<p><i>Élaboration de l'identité visuelle de l'étiquette</i></p>
-									↓
-								    <br><br>
+									<span class="image main">
+										<p><i><h5>Logo, identité visuelle et packaging</h5></i></p>
+											<h3>Bbdx</h3> 
+											<br>
+											<h4>Marque de bière artisanale française.
+											<br>Fabriquée par 4 amis : Benoit, Benjamin, Damien et Xavier.
+											<br>—<br><br><br></h4>
+									</span>
+
 									<span class="image main"><img src="images/bbdx01.jpg" alt="Logotype" /></span>
 									<br>
 									<span class="image main"><img src="images/bbdx02.jpg" alt="Etiquette bière" /></span>
