--- a/estampe.html
+++ b/estampe.html
@@ -38,15 +38,24 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<strong><h2>ESTAMPE COSMETICS</h2></strong>
-									—<br>
-									<strong>Marque de maquillage non-genré, naturel et éco-conçu.</strong>
-									<p><i>Webdesign</i></p>
-									↓
-								    <br><br>
-									<span class="image main"><img src="images/estampe03.jpg" alt="prototype de la maquette estampe" /></span>
+									<span class="image main">
+										<p><i><h5>Webdesign</h5></i></p>
+											<h3>Estampe Cosmetics</h3> 
+											<br>
+											<h4>Maquillage non-genré, naturel et éco-conçu.
+											<br>www.estampe-cosmetics.com
+											<br>—<br><br><br></h4>
+										</span>
+	
+									<span class="image main"><img src="images/estampe.png" alt="prototype de la maquette estampe" /></span>
+									<br>
+									<span class="image main"><img src="images/estampeshoot.png" alt="prototype de la maquette estampe" /></span>
+									<br>
+									<span class="image main"><img src="images/estampe08.jpg" alt="shop estampe" /></span>
 									<br>
 									<span class="image main"><img src="images/estampe01.jpg" alt="mockup de du site estampe cosmetics" /></span>
+									<br>
+									<span class="image main"><img src="images/estampe03.jpg" alt="prototype de la maquette estampe" /></span>
 									<br>
 									<span class="image main"><img src="images/estampe07.jpg" alt="rubrique shop" /></span>
 									<br>
@@ -54,7 +63,6 @@
 									<br>
 									<span class="image main"><img src="images/estampe05.jpg" alt="site estampe sur tablette" /></span>
 									<br>
-									<span class="image main"><img src="images/estampe08.jpg" alt="shop estampe" /></span>
 									
 								
 
