--- a/lbk.html
+++ b/lbk.html
@@ -38,12 +38,16 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<strong><h2>LBK PARIS</h2></strong>
-									—<br>
-									<strong>Marque de vêtement parisienne, éco responsable.</strong>
-									<p><i>Logo et identité visuelle</i></p>
-									↓
-								    <br><br>
+							
+									<span class="image main">
+									<p><i><h5>Logo et identité visuelle</h5></i></p>
+										<h3>LBK Paris</h3> 
+										<br>
+										<h4>Vêtements conçus en Tunisie.
+										<br>Marque pour femmes, écoresponsable, Business Wear.
+										<br>—<br><br><br></h4>
+									</span>
+
 									<span class="image main"><img src="images/lbk01.jpg" alt="vitrine du magasin LBK" /></span>
 									<br>
 									<span class="image main"><img src="images/lbk02.jpg" alt="site lbk sur tablette" /></span>
