--- a/marine.html
+++ b/marine.html
@@ -39,12 +39,15 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>MARINE</h2></strong>
-									—<br>
-									<strong>Diététicienne, naturopathe</strong>
-									<p><i>Logo, identité visuelle et documentation</i></p>
-									↓
-								    <br><br>
+									<span class="image main">
+										<p><i><h5>Logo et identité visuelle</h5></i></p>
+											<h3>Marine</h3> 
+											<br>
+											<h4>Lancement d'activité libérale.
+											<br>Diététicienne, nutritionniste et naturopathe.
+											<br>—<br><br><br></h4>
+										</span>
+	
 									<span class="image main"><img src="images/marine01.jpg" alt="marine, carte de visite" /></span>
 									<br>
 									<span class="image main"><img src="images/marine02.jpg" alt="logo marine blanc" /></span>
