--- a/olena.html
+++ b/olena.html
@@ -39,12 +39,15 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>OLENA YATSENKO</h2></strong>
-									—<br>
-									<strong>Marque de vêtement fabriqué en Corse.</strong>
-									<p><i>Logo et identité visuelle</i></p>
-									↓
-								    <br><br>
+									<span class="image main">
+										<p><i><h5>Logo et identité visuelle</h5></i></p>
+											<h3>Olena Yatsenko</h3> 
+											<br>
+											<h4>Designer, couturière et styliste depuis 1996.
+											<br>Fabrication Corse, confection unique, série limité.
+											<br>—<br><br><br></h4>
+										</span>	
+
 									<span class="image main"><img src="images/olena01.jpg" alt="logo olena" /></span>
 									<br>
 									<span class="image main"><img src="images/olena02.jpg" alt="carte de visite olena" /></span>
