--- a/clubimmo.html
+++ b/clubimmo.html
@@ -39,13 +39,16 @@
 							<section id="one">
 								<div class="inner">
 									
-									<strong><h2>CLUB IMMOBILIER</h2></strong>
-									—<br>
-									<strong>Société de formation dans l'investissement immobilier.</strong>
-									<p><i>Création des blasons, livret de bienvenue et du packaging</i></p>
-									↓
-								    <br><br>
-									<span class="image main"><img src="images/clubimmo01.gif" alt="gif des blasons formation" /></span>
+									<span class="image main">
+										<p><i><h5>Packaging, logo et livret</h5></i></p>
+											<h3>Club Immobilier</h3>
+											<br>
+											<h4>Société de formation dans l'investissement immobilier.
+											<br>Lancement de la box de bienvenue pour les élèves qui s'inscrivent à une formation.
+											<br>—<br><br><br></h4>
+										</span>
+
+									<span class="image main"><img src="images/club.png" alt="gif des blasons formation" /></span>
 									<br>
 									<span class="image main"><img src="images/clubimmo01.jpg" alt="blasons des formations" /></span>
 									<br>
@@ -60,6 +63,8 @@
 									<span class="image main"><img src="images/clubimmo06.jpg" alt="intérieur du livret" /></span>
 									<br>
 									<span class="image main"><img src="images/clubimmo02.jpg" alt="box, livret et stickers" /></span>
+									<br>
+									<span class="image main"><img src="images/clubimmo01.gif" alt="gif des blasons formation" /></span>
 									<br>
 
 										<p>
