--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO </a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -38,13 +38,16 @@
 							<section id="one">
 								<div class="inner">
 									<br><br>
-									<img src="images/meve.GIF" width="312px" alt="gifmeve"/>
-									<br>
-									<a href="mailto:hello@marievelasco.com" >✎</a>
-									<br>
+									<img src="images/marievelasco.png" width="250px" alt="marievelasco"/>
+									<br><br>
+									<a href="mailto:hello@marievelasco.com" >@</a>
+									<br><br>
 									Designer Graphiste
 									<br>
-									<i>0 6 . 1 0 . 4 9 . 7 8 . 5 0 </i>
+									<i>06.10.49.78.50</i>
+								
+									<br>
+									_
 									<br>
 									<br>
 									
@@ -52,7 +55,7 @@
 										<section>
 											<ul class="icons">
 												<li><a href="https://www.behance.net/marievelasco" target="_blank" class="icon brands alt fa-behance"><span class="label">Behance</span></a></li>
-												<li><a href="https://www.instagram.com/studiomeve_/?hl=fr" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="https://www.instagram.com/marie_velasco/?hl=fr" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/marie-velasco-25a074167/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</section>
