--- a/adr.html
+++ b/adr.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -39,17 +39,19 @@
 							<section id="one">
 								<div class="inner">
 									
+									<span class="image main"><img src="images/adr.png" alt="Couverture du directory" /></span>
+									<br>
+
 									<span class="image main">
 										<p><i><h5>Création et mise en page</h5></i></p>
 											<h3>Agence A.D.R</h3> 
 											<br>
 											<h4>Agence de communication.
 											<br>Spécialisée dans la création d'expériences pour les marques de luxe.
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 									</span>
 
-									<span class="image main"><img src="images/adr.png" alt="Couverture du directory" /></span>
-									<br>
+									
 									<span class="image main"><img src="images/adr01.jpg" alt="Couverture du directory" /></span>
 									<br>
 									<span class="image main"><img src="images/adr02.jpg" alt="signature adr" /></span>
@@ -85,7 +87,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
