--- a/augarage.html
+++ b/augarage.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -39,13 +39,17 @@
 							<section id="one">
 								<div class="inner">
 
+									<span class="image main"><img src="images/augarage.gif" alt="Logotype" /></span>
+									<br>
+
+
 									<span class="image main">
 										<p><i><h5>Logo, identité visuelle et design d'application</h5></i></p>
 											<h3>Au Garage</h3> 
 											<br>
 											<h4>Service permettant aux automobilistes de recevoir plusieurs devis.
 											<br>Des meilleurs garagistes près de chez eux.
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 										</span>	
 									
 									<span class="image main"><img src="images/augarage-1.jpg" alt="Logotype" /></span>
@@ -55,6 +59,8 @@
 									<span class="image main"><img src="images/augarage-4.png" alt="Icone de de l'application" /></span>
 									<br>
 									<span class="image main"><img src="images/augarage-5.png" alt="Interface ui ux" /></span>
+									<br> 
+									<span class="image main"><img src="images/app.gif" alt="Interface ui ux" /></span>
 									<br> 
 									<span class="image main"><img src="images/augarage-6.png" alt="Mockup appllication" /></span>
 									<br> 
@@ -83,7 +89,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
