--- a/clubimmo.html
+++ b/clubimmo.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -39,17 +39,18 @@
 							<section id="one">
 								<div class="inner">
 									
+									<span class="image main"><img src="images/club.png" alt="gif des blasons formation" /></span>
+									<br>
+
 									<span class="image main">
 										<p><i><h5>Packaging, logo et livret</h5></i></p>
 											<h3>Club Immobilier</h3>
 											<br>
 											<h4>Société de formation dans l'investissement immobilier.
 											<br>Lancement de la box de bienvenue pour les élèves qui s'inscrivent à une formation.
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 										</span>
 
-									<span class="image main"><img src="images/club.png" alt="gif des blasons formation" /></span>
-									<br>
 									<span class="image main"><img src="images/clubimmo01.jpg" alt="blasons des formations" /></span>
 									<br>
 									<span class="image main"><img src="images/clubimmo03.jpg" alt="livret de bienvenue club immo" /></span>
@@ -89,7 +90,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
