--- a/estampe.html
+++ b/estampe.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -38,17 +38,20 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
+
+									<span class="image main"><img src="images/estampe.png" alt="prototype de la maquette estampe" /></span>
+									<br>
+
 									<span class="image main">
 										<p><i><h5>Webdesign</h5></i></p>
 											<h3>Estampe Cosmetics</h3> 
 											<br>
 											<h4>Maquillage non-genré, naturel et éco-conçu.
 											<br>www.estampe-cosmetics.com
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 										</span>
 	
-									<span class="image main"><img src="images/estampe.png" alt="prototype de la maquette estampe" /></span>
-									<br>
+									
 									<span class="image main"><img src="images/estampeshoot.png" alt="prototype de la maquette estampe" /></span>
 									<br>
 									<span class="image main"><img src="images/estampe08.jpg" alt="shop estampe" /></span>
@@ -88,7 +91,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
