--- a/bbdx.html
+++ b/bbdx.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -38,6 +38,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
+
+									<span class="image main"><img src="images/bbdx.gif" alt="Logotype" ;"   /></span>
+									<br>
 									
 									<span class="image main">
 										<p><i><h5>Logo, identité visuelle et packaging</h5></i></p>
@@ -45,7 +48,7 @@
 											<br>
 											<h4>Marque de bière artisanale française.
 											<br>Fabriquée par 4 amis : Benoit, Benjamin, Damien et Xavier.
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 									</span>
 
 									<span class="image main"><img src="images/bbdx01.jpg" alt="Logotype" /></span>
@@ -85,7 +88,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
