--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+						<a href="index.html" class="logo">MARIE VELASCO</a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -66,7 +66,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvolena.jpg" alt="Projet Olena Yatsenko" />
+										<img src="images/couvolena.png" alt="Projet Olena Yatsenko" />
 									</span>
 									<header class="major">
 										<a href="olena.html" class="link"></a>
@@ -82,7 +82,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvlbk.jpg" alt="Projet LBK paris" />
+										<img src="images/couvlbk.png" alt="Projet LBK paris" />
 									</span>
 									<header class="major">
 										<a href="lbk.html"  class="link"></a>
@@ -91,7 +91,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvmarine.jpg" alt="Projet Marine, Diétécienne, naturopathe" />
+										<img src="images/couvmarine.png" alt="Projet Marine, Diétécienne, naturopathe" />
 									</span>
 									<header class="major">
 										<a href="marine.html"  class="link"></a>
@@ -117,7 +117,7 @@
 										<section>
 											<ul class="icons">
 												<li><a href="https://www.behance.net/marievelasco" target="_blank" class="icon brands alt fa-behance"><span class="label">Behance</span></a></li>
-												<li><a href="https://www.instagram.com/studiomeve_/?hl=fr" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="https://www.instagram.com/marie_velasco/?hl=fr" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/marie-velasco-25a074167/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 											<br>
@@ -138,7 +138,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>&copy; by MEVE</li>
+								<li>&copy; Marie Velasco</li>
 							</ul>
 						</div>
 					</footer>
