--- a/olena.html
+++ b/olena.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -39,13 +39,16 @@
 							<section id="one">
 								<div class="inner">
 									
+									<span class="image main"><img src="images/olena2.gif" alt="olena, plage gif" style="border: 5px solid #111111;" /></span>
+									<br>
+
 									<span class="image main">
 										<p><i><h5>Logo et identité visuelle</h5></i></p>
 											<h3>Olena Yatsenko</h3> 
 											<br>
 											<h4>Designer, couturière et styliste depuis 1996.
 											<br>Fabrication Corse, confection unique, série limité.
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 										</span>	
 
 									<span class="image main"><img src="images/olena01.jpg" alt="logo olena" /></span>
@@ -65,6 +68,8 @@
 									<span class="image main"><img src="images/olena08.jpg" alt="tote bag olena" /></span>
 									<br>
 									<span class="image main"><img src="images/olena09.jpg" alt="tote bag olena" /></span>
+									<br>
+									<span class="image main"><img src="images/olena.gif" alt="femme olena" style="border: 5px solid #111111;" /></span>
 									<br>
 
 										<p>
@@ -89,7 +94,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy;by MEVE</li>
+					<li>&copy;Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
