--- a/lbk.html
+++ b/lbk.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -38,6 +38,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
+
+									<span class="image main"><img src="images/lbk.gif" alt="vitrine du magasin LBK" /></span>
+									<br>
 							
 									<span class="image main">
 									<p><i><h5>Logo et identité visuelle</h5></i></p>
@@ -45,12 +48,10 @@
 										<br>
 										<h4>Vêtements conçus en Tunisie.
 										<br>Marque pour femmes, écoresponsable, Business Wear.
-										<br>—<br><br><br></h4>
+										<br><br>—<br><br><br></h4>
 									</span>
 
 									<span class="image main"><img src="images/lbk01.jpg" alt="vitrine du magasin LBK" /></span>
-									<br>
-									<span class="image main"><img src="images/lbk02.jpg" alt="site lbk sur tablette" /></span>
 									<br>
 									<span class="image main"><img src="images/lbk03.jpg" alt="packaging lbk" /></span>
 									<br>
@@ -61,6 +62,10 @@
 									<span class="image main"><img src="images/lbk07.jpg" alt="publicité nouvelle collection" /></span>
 									<br>
 									<span class="image main"><img src="images/lbk08.jpg" alt="photo des vêtements lbk paris" /></span>
+									<br>
+									<span class="image main"><img src="images/lbk09.jpg" alt="photo des vêtements lbk paris" /></span>
+									<br>
+									<span class="image main"><img src="images/lbk11.jpg" alt="photo des vêtements lbk paris" /></span>
 									<br>
 
 										<p>
@@ -85,7 +90,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
