--- a/marine.html
+++ b/marine.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✽</a>
+					<a href="index.html" class="logo">MARIE VELASCO</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -38,6 +38,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
+
+									<span class="image main"><img src="images/marine.gif" alt="marine gif" style="border: 5px solid #111111;"/></span>
+									<br>
 									
 									<span class="image main">
 										<p><i><h5>Logo et identité visuelle</h5></i></p>
@@ -45,14 +48,15 @@
 											<br>
 											<h4>Lancement d'activité libérale.
 											<br>Diététicienne, nutritionniste et naturopathe.
-											<br>—<br><br><br></h4>
+											<br><br>—<br><br><br></h4>
 										</span>
-	
+
+									
 									<span class="image main"><img src="images/marine01.jpg" alt="marine, carte de visite" /></span>
 									<br>
-									<span class="image main"><img src="images/marine02.jpg" alt="logo marine blanc" /></span>
-									<br>
 									<span class="image main"><img src="images/marine03.jpg" alt="logo marine vert" /></span>
+									<br>
+									<span class="image main"><img src="images/marine02.jpg" alt="logo marine blanc" /></span>
 									<br>
 									<span class="image main"><img src="images/marine04.jpg" alt="homepage site marine" /></span>
 									<br>
@@ -61,6 +65,8 @@
 									<span class="image main"><img src="images/marine06.jpg" alt="stickers marine" /></span>
 									<br>
 									<span class="image main"><img src="images/marine07.jpg" alt="brochure marine" /></span>
+									<br>
+									<span class="image main"><img src="images/marine08.jpg" alt="brochure marine" /></span>
 									<br>
 
 										<p>
@@ -85,7 +91,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; by MEVE</li>
+					<li>&copy; Marie Velasco</li>
 				</ul>
 				<br>
 			</div>
