--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couv02.jpg" alt="BBDX beer" />
+										<img src="images/couvbbdx.png" alt="BBDX beer" />
 									</span>
 									<header class="major">
 										<a href="bbdx.html"  class="link"></a>
