--- a/index.html
+++ b/index.html
@@ -42,42 +42,42 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/couv01.jpg" alt="Au garage" />
+										<img src="images/olenacouv.png" alt="Olena, vêtements" />
 									</span>
 									<header class="major">
-										<a href="augarage.html"   class="link"></a>
+										<a href="olena.html"   class="link"></a>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvbbdx.png" alt="BBDX beer" />
+										<img src="images/couvmarine.png" alt="Marine, Diététicienne" />
 									</span>
 									<header class="major">
-										<a href="bbdx.html"  class="link"></a>
+										<a href="marine.html"  class="link"></a>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couv03.jpg" alt="Projet Club immobilier" />
+										<img src="images/couvadr.jpg" alt="ADR, édition" />
 									</span>
 									<header class="major">
-										<a href="clubimmo.html"  class="link"></a>
+										<a href="adr.html"  class="link"></a>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvolena.png" alt="Projet Olena Yatsenko" />
+										<img src="images/couvbbdx.png" alt="BBDX, Bières" />
 									</span>
 									<header class="major">
-										<a href="olena.html" class="link"></a>
+										<a href="bbdx.html" class="link"></a>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvadr.jpg" alt="Projet Agence ADR" />
+										<img src="images/couvestampe.png" alt="Club Immobilier" />
 									</span>
 									<header class="major">
-										<a href="adr.html"   class="link"></a>
+										<a href="estampe.html"   class="link"></a>
 									</header>
 								</article>
 								<article>
@@ -91,19 +91,19 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvmarine.png" alt="Projet Marine, Diétécienne, naturopathe" />
+										<img src="images/clubimmocouv.jpg" alt="Projet Estampe cosmetics" />
 									</span>
 									<header class="major">
-										<a href="marine.html"  class="link"></a>
+										<a href="clubimmo.html"  class="link"></a>
 									
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/couvestampe.jpg" alt="Projet Estampe cosmetics" />
+										<img src="images/augaragecouv.png" alt="Au garage" />
 									</span>
 									<header class="major">
-										<a href="estampe.html"  class="link"></a>
+										<a href="augarage.html"  class="link"></a>
 									</header>
 								</article>
 							</section>
