--- a/lbk.html
+++ b/lbk.html
@@ -39,8 +39,6 @@
 							<section id="one">
 								<div class="inner">
 
-									
-							
 									<span class="image main">
 									<p><i><h5>Logo et identité visuelle</h5></i></p>
 										<h3>LBK Paris</h3> 
@@ -56,6 +54,8 @@
 									<br>
 									<span class="image main"><img src="images/lbk04.jpg" alt="étiquette de vêtement lbk" /></span>
 									<br>
+									<span class="image main"><img src="images/lbk05.png" alt="étiquette de vêtement lbk" /></span>
+									<br>
 									<span class="image main"><img src="images/lbk06.jpg" alt="site lbk" /></span>
 									<br>
 									<span class="image main"><img src="images/lbk07.jpg" alt="publicité nouvelle collection" /></span>
@@ -63,6 +63,8 @@
 									<span class="image main"><img src="images/lbk08.jpg" alt="photo des vêtements lbk paris" /></span>
 									<br>
 									<span class="image main"><img src="images/lbk09.jpg" alt="photo des vêtements lbk paris" /></span>
+									<br>
+									<span class="image main"><img src="images/lbk10.png" alt="photo des vêtements lbk paris" /></span>
 									<br>
 									<span class="image main"><img src="images/lbk11.jpg" alt="photo des vêtements lbk paris" /></span>
 									<br>
